--- a/package.json
+++ b/package.json
@@ -21,9 +21,23 @@
     "@angular/platform-browser-dynamic": "^14.1.2",
     "@angular/router": "^14.1.2",
     "@sweetalert2/ngx-sweetalert2": "^11.0.0",
+    "@swimlane/ngx-charts": "^13.0.4",
     "chart.js": "^3.8.0",
+    "d3": "^7.6.1",
+    "d3-array": "^1.2.1",
+    "d3-brush": "^1.0.4",
+    "d3-color": "^1.0.3",
+    "d3-force": "^1.1.0",
+    "d3-format": "^1.2.0",
+    "d3-hierarchy": "^1.1.5",
+    "d3-interpolate": "^1.1.5",
+    "d3-scale": "^1.0.6",
+    "d3-selection": "^1.1.0",
+    "d3-shape": "^1.2.0",
+    "d3-time-format": "^2.1.0",
     "hammerjs": "^2.0.8",
     "ng-zorro-antd": "^13.4.0",
+    "ngx-chart": "^1.0.5",
     "rxjs": "~7.4.0",
     "sweetalert": "^2.1.2",
     "tslib": "^2.3.0",
