--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "d3-shape": "^1.2.0",
     "d3-time-format": "^2.1.0",
     "hammerjs": "^2.0.8",
+    "moment": "^2.29.4",
     "ng-zorro-antd": "^13.4.0",
     "ngx-chart": "^1.0.5",
     "rxjs": "~7.4.0",
